Reported by Michael Holden. [David]

=item *

Fixed typo in the final message after an upgrade completes. Reported by Nate
Perry-Thistle. [David]

=item *

Fixed a 1.8.9 upgrade script that adds a foreign key constraint to the
"element_member" table so that it properly tests for the foreign key
constraint before it tries to add it. Reported by Wayne Slavin. [David]

=back

=cut

##############################################################################

=head1 VERSION 1.8.9 (2006-01-23)

=head2 Improvements

=over

=item *

Added missing foreign key constraints and indexes on the C<category_keyword>,
C<story_keyword>, C<media_keyword>, C<element_member>, and
C<media_contributor> tables. This should make keyword lookups, at least, much
faster. [David]

=item *

When a story or media document is published with an expiration date earlier
than the publish date, the UI will now properly report that the document has
been "expired", rather than "published". Thanks to Simon Wilcox for the spot.
[David]

=item *

The Bulk Publish interface in the UI now displays the name of the site
alongside the category if there is more than one site, so as to disambiguate
the list of categories. Reported by Marshall Roch. [David]

=item *

Added constraints to the story and media tables in the database to prevent the
publish status from becoming out of sync with the publish date and first
publish date. [David]

=item *

Changed code to show the first displayable data field of a subelement when
viewing or editing an asset as opposed to only text fields. [Paul Orrock]

=item *

L<Bric::SOAP::Workflow|Bric::SOAP::Workflow>'s publish method now schedules a
publish job instead of immediately publishing, thus allowing the
C<publish_date> parameter to actually work, and ensuring that the proper
version is published. [David]

=back

=head2 Bug Fixes

=over

=item *

Fixed misnamed and/or missing keyword foreign keys on the C<category_keyword>,