@@ -38,6 +38,10 @@ Fixed a 1.8.9 upgrade script that adds a foreign key constraint to the
 "element_member" table so that it properly tests for the foreign key
 constraint before it tries to add it. Reported by Wayne Slavin. [David]
 
+=item *
+
+Refined a few other upgrade scripts, with thanks to Rod Taylor. [David]
+
 =back
 
 =cut
